fixed dark mode issuse

--- a/projects/theme-challenge/modules/article-card/style.css
+++ b/projects/theme-challenge/modules/article-card/style.css
@@ -14,7 +14,7 @@
 
 	/*box-shadow: 1px 1px 10px  var(--weed-secondary-color);*/
 
-	mix-blend-mode: multiply;
+	/*mix-blend-mode: multiply;*/
 
 }
 
